# Alterion

./: CMakeLists.txt  README.md
.github/workflows/: run-lexxer.yml
assets/: Alterion-langLogo.ai
core/: CMakeLists.txt  alterion_cli.cpp  alterion_compiler.cpp  ast_implementation.cpp  cli_tools.cpp  code_generator.cpp  codegen.cpp  optimizer.cpp  runtime.cpp  semantic_analysis.cpp  standard_library.cpp
core/include/: ast.h  codegen.h  lexer.h  parser.h  semantic_analysis.h  standard_library.h  token.h  type_checker.h  type_system.h
core/lexer/: lexer.cpp  lexer_complete.cpp  lexer_enhanced.cpp  token.cpp
core/parser/: parser.cpp  parser_complete.cpp  parser_enhanced.cpp
documentation/: architecture.md  getting-started.md  migration.md
documentation/api-reference/: README.md
documentation/language-guide/: README.md
examples/: demo_app.alt  lexer-app-test.alt
include/: ast.h  ast_complete.h  cli_tools.h  code_generator.h  lexer.h  optimizer.h  parser.h  parser_complete.h  runtime.h  utf8_utils.h
results-dashboard/: .pnp.cjs  index.html  package.json
results-dashboard/public/results/: ast-results.json  lexer-results.json  parser-results.json
results-dashboard/src/: App.jsx
results-dashboard/src/veiws/: dashboard-fixes.css  index.jsx
scripts/: asttest.bat  asttest.sh  build.bat  build.sh  build_and_test.bat  build_and_test.sh  build_cli.bat  build_code_gen.bat  build_codegen.bat  build_full_pipeline.bat  build_lsp_server.bat  build_optimizer.bat  build_runtime.bat  build_semantic_analysis.bat  build_test.bat  lexer.bat  lexer.sh  quick_test.bat  run_tests.bat  verify_phase_2b.bat  verify_phase_2c.bat  verify_phase_2d.bat
tests/unit/: ast_test.cpp  asttest.cpp  basic_test.cpp  cli_test.cpp  code_gen_test.cpp  codegen_test.cpp  complete_test.cpp  enhanced_lexer_demo.cpp  final_test.cpp  full_pipeline_test.cpp  lexertest.cpp  lsp_server_test.cpp  optimizer_test.cpp  parser_test_simple.cpp  parsertest.cpp  runtime_test.cpp  semantic_analysis_test.cpp  simple_test.cpp  test_complete.cpp  test_enhanced_lexer.cpp  test_enhanced_parser.cpp  test_lexer_only.cpp  test_main.cpp  test_type_system.cpp
tools/lsp/: lsp_server.cpp  lsp_server.h
